Sua font chữ navbar

--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -39,8 +39,15 @@ p{
     color: #662D91;
     border: 2px solid #662D91;
 }
-strong{
-    font-size: 18px;
+@media only screen and (max-width: 768px){
+    strong{
+        font-size: 12px;
+    }
+}
+@media only screen and (min-width: 769px) {
+    strong {
+        font-size: 18px;
+    }
 }
 .headertintuc{
     font-family: "VNF-Bodoni Regular", serif;
