--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -39,12 +39,17 @@ p{
     color: #662D91;
     border: 2px solid #662D91;
 }
-@media only screen and (max-width: 768px){
+@media only screen and (max-width: 809px){
     strong{
         font-size: 12px;
     }
 }
-@media only screen and (min-width: 769px) {
+@media only screen and (min-width: 810px) and (max-width:1009px){
+    strong{
+        font-size: 13px;
+    }
+}
+@media only screen and (min-width: 1010px) {
     strong {
         font-size: 18px;
     }
