--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -165,7 +165,7 @@ ul li a{
     top: 0;
     bottom: 0;
     left: 0;
-    right: 30px;
+    right: 0;
     opacity: 0;
     transition: .5s ease;
     background-color: #662D91;
