--- a/CSS/Homepage.css
+++ b/CSS/Homepage.css
@@ -40,17 +40,17 @@ p{
     border: 2px solid #662D91;
 }
 @media only screen and (max-width: 809px){
-    strong{
+    li strong{
         font-size: 12px;
     }
 }
 @media only screen and (min-width: 810px) and (max-width:1009px){
-    strong{
+    li strong{
         font-size: 13px;
     }
 }
 @media only screen and (min-width: 1010px) {
-    strong {
+    li strong {
         font-size: 18px;
     }
 }
@@ -142,7 +142,6 @@ ul li a{
     line-height: normal;
     font-weight: inherit;
     margin-top: 15px;
-
 }
 .panel-body{
     padding-top: 5px;
